@startuml US10-CD
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class AnalyseIncomeEvolutionUI {
}

class AnalyseIncomeEvolutionController {
    + AnalyseIncomeEvolutionController()
    + getPoliticalAgents() : List<PoliticalAgentDTO>
    + getIncomeEvolution(agentDto, startDate, endDate) : List<DeclarationDTO>
}

class PoliticalAgentDTO {
    - name : String
    - email : String
}

class DeclarationDTO {
    - id : String
    - type : String
    - submissionDate : Date
    - status : String
    - summary : String
    - positions : List<String>
    - incomes : List<String>
    - subsidies : List<String>
    - totalIncome : double
}

class PoliticalAgentMapper {
    + toDTO(agent) : PoliticalAgentDTO
    + toDTO(agents) : List<PoliticalAgentDTO>
}

class DeclarationMapper {
    + toDTO(declaration) : DeclarationDTO
    + toDTO(declarations) : List<DeclarationDTO>
}

class Repositories <<Singleton>> {
    - {static} instance : Repositories
    - Repositories()
    + {static} getInstance() : Repositories
    + getPoliticalAgentRepository() : PoliticalAgentRepository
    + getDeclarationRepository() : DeclarationRepository
}

class PoliticalAgentRepository {
    + getAll() : List<PoliticalAgent>
    + getByEmail(email) : PoliticalAgent
}

class DeclarationRepository {
    + getValidatedDeclarationsForAgentBetween(agent, startDate, endDate) : List<Declaration>
}

class PoliticalAgent {
    - name
    - email
    - nationalIdentityCard
    - taxIdentificationNumber
}

class "Declaration of Interests" as Declaration {
    - id
    - submissionDate
    - status
    - type
    + getIncomes()
    + getSubsidyEntries()
    + getType()
    + getSubmissionDate()
}

enum DeclarationStatus <<enumeration>> {
    PENDING
    VALIDATED
    REJECTED
}

enum DeclarationType <<enumeration>> {
    INITIAL
    REGULAR
    EXCEPTIONAL
}

class Income {
    - amount
    - source
    - date
}

class SubsidyEntry {
    - amount
    - description
    - date
}

AnalyseIncomeEvolutionUI .> AnalyseIncomeEvolutionController

AnalyseIncomeEvolutionController ..> Repositories
Repositories *-- PoliticalAgentRepository
Repositories *-- DeclarationRepository
AnalyseIncomeEvolutionController ..> PoliticalAgentRepository
AnalyseIncomeEvolutionController ..> DeclarationRepository
AnalyseIncomeEvolutionController ..> PoliticalAgent
AnalyseIncomeEvolutionController ..> Declaration

AnalyseIncomeEvolutionUI ..> PoliticalAgentDTO
AnalyseIncomeEvolutionUI ..> DeclarationDTO

AnalyseIncomeEvolutionController ..> PoliticalAgentMapper
AnalyseIncomeEvolutionController ..> DeclarationMapper
PoliticalAgentMapper ..> PoliticalAgent
PoliticalAgentMapper ..> PoliticalAgentDTO
DeclarationMapper ..> Declaration
DeclarationMapper ..> DeclarationDTO

PoliticalAgentRepository --> "*" PoliticalAgent : agents
DeclarationRepository --> "*" Declaration : declarations

PoliticalAgent "1" -- "*" Declaration : submits >
Declaration "*" -- "1" DeclarationStatus : has >
Declaration "*" -- "1" DeclarationType : has >
Declaration "1" *-- "*" Income : includes >
Declaration "1" *-- "*" SubsidyEntry : includes >

note right of AnalyseIncomeEvolutionController
    getIncomeEvolution validates inputs (throws
    IllegalArgumentException if agentDto or either date
    is null, or if startDate.after(endDate) — AC2),
    resolves the agent by email via getByEmail, and
    returns DTOs built by the DeclarationMapper
    (DTO pattern), so the UI never touches domain objects.
end note

note bottom of DeclarationRepository
    AC3: returns only declarations
    with status = VALIDATED in [start, end]
    AC4: result is sorted by submissionDate
end note

@enduml
